
[ Version 0.1.2a ] 
	Thursday 16/1-2014 
	-	Added questionUnlock attribute, allowing the question to be unlocked by
	 	answering a different question.
	-	Full scan of progressUnlocks at startup if new questions are detected.
	-	Added more people to credit list

[ Version 0.1.3a ] 
	Friday 17/1-2014 
	-	Made the UI reload occur automatically when you reset saved data.
	-	Added #32
	-	Changed model on #28 to a more fitting one

[ Version 0.1.5a ] 
	Saturday 18/1-2014 
	-	Remade the client-to-client communcation so the addon only reserves 1 prefix
		for all kinds of messages instead of one prefix for each type of message.
	-	Added a frame to the inspect frame showing the ExploreTheWorld rank of the
		player as well as their progress.
	-	Remade how other players ranks are shown to you, instead of sending your rank
		in plain text format (basically allowing people to make all kinds of custom ranks)
		it will send the total amount of quests as well as the number of completed quests.
		The receiving end will then convert these to percent and grab a rank from their
		client accordingly.
	Sunday 19/1-2014
	-	Added user created questions
	Monday 20/1-2014
	-	Fixed a bug with group questions still using old prefix to broadcast data

[ Version 0.1.7a ] 
	Thursday 23/1-2014
	- Added a simple help frame, giving some info on how things work.
	Saturday 25-1-2014
	- Added startup scan for question unlocks if more questions have been added
	- Added questions 40-44
[ Version 0.1.8a ] 
	Sunday 26/1-2014
	- Removed zoneRequirementUnlockCopy attribute and redid zoneUnlockHash to make
	it work more like other similar attributes.
	- Added question 45
	Monday 27/1-2014
	- Added question 46
[ Version 0.1.9a ] 
	Wednesday 29/1-2014
	- Fixed bug that was making modelXOffset not being used properly by the addon
	- Added question 47-48