@@ -44,4 +44,5 @@
 [ Version 0.1.9a ] 
 	Wednesday 29/1-2014
 	- Fixed bug that was making modelXOffset not being used properly by the addon
-	- Added question 47-48
+	- Added question 47-49
+	- Fixed wording on filter and popup frames
